--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "ts-node src/app.ts",
-    "build": "prisma generate && tsc",
+    "build": "npx prisma generate && tsc",
     "postinstall": "prisma generate",
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
